--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@lordicon/react": "^1.4.1",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.1.1",
     "lottie-web": "^5.12.2",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
